# shaon

./: .editorconfig  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROTOCOL.md  README.md  build.rs  deny.toml  typos.toml
.cargo/: config.toml
.claude-plugin/: plugin.json
.claude/skills/: hilan  shaon
.claude/skills/release/: SKILL.md
.codex-plugin/: plugin.json
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  gitleaks.toml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  gitleaks.yml  publish-skill.yml  release.yml
crates/hilan-cli/: Cargo.toml  build.rs
crates/hilan-cli/src/: lib.rs
crates/hilan-mcp/: Cargo.toml
crates/hilan-mcp/src/: lib.rs
crates/hr-core/: Cargo.toml
crates/hr-core/src/: lib.rs  use_cases.rs
crates/provider-hilan/: Cargo.toml
crates/provider-hilan/src/: api.rs  attendance.rs  client.rs  config.rs  lib.rs  ontology.rs  payslip.rs  provider.rs  reports.rs
crates/provider-hilan/tests/fixtures/: README.md
crates/provider-hilan/tests/fixtures/asmx/: GetInitialData.json  tasks-GetData.json
crates/provider-hilan/tests/fixtures/calendar/: calendar-select-cell.html  select-dom-state.json
crates/shaon-cli/: Cargo.toml  build.rs
crates/shaon-cli/src/: lib.rs
crates/shaon-mcp/: Cargo.toml
crates/shaon-mcp/src/: lib.rs
examples/: overview.rs
scripts/: check-release-version.sh  codesign-macos.sh  install.sh  release.sh  run.sh  setup-codesign.sh
skills/hilan/: SKILL.md
skills/hilan/evals/: evals.json
skills/shaon/: SKILL.md
skills/shaon/evals/: evals.json
src/: api.rs  attendance.rs  client.rs  config.rs  core.rs  lib.rs  main.rs  mcp.rs  ontology.rs  provider.rs  reports.rs  use_cases.rs
src/app/: cli.rs  mcp.rs  mod.rs
tasks/: plan.md
tests/: cli_test.rs  codesign_config_test.rs  core_api_test.rs  hilan_provider_test.rs  parser_test.rs  shaon_provider_test.rs  use_cases_test.rs
tests/fixtures/asmx/: GetData.json  GetInitialData.json  GetTasksInitialCount.json  salary-GetInitialData-full.json  salary-GetInitialData.json  tasks-GetData.json
tests/fixtures/calendar/: calendar-row0.html  calendar-select-cell.html  select-dom-state.json
