[package]
name = "hilan"
version = "0.4.0"
edition = "2021"
rust-version = "1.80"
description = "CLI for Hilan attendance reporting and payslip retrieval"
license = "MIT"
repository = "https://github.com/avivsinai/hilan"
authors = ["Aviv Sinai <aviv.s@taboola.com>"]
keywords = ["hilan", "hilanet", "attendance", "hr", "cli"]
categories = ["command-line-utilities"]

[lib]
name = "hilan"
path = "src/lib.rs"

[[bin]]
name = "hilan"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies", "charset", "http2"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
anyhow = "1"
async-trait = "0.1"
aes-gcm = "0.10"
regex = "1"
rand = "0.8"
scraper = "0.22"
chrono = { version = "0.4", features = ["serde"] }
rmcp = { version = "1.3", features = ["server", "transport-io"] }
schemars = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
reqwest_cookie_store = "0.8"
cookie_store = "0.21"
keyring = { version = "3", features = ["apple-native", "linux-native"] }
secrecy = { version = "0.10", features = ["serde"] }
zeroize = "1"
rpassword = "7"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[lints.rust]
unsafe_code = "warn"
rust_2018_idioms = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
needless_pass_by_value = "allow"
too_many_arguments = "allow"
similar_names = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
opt-level = "s"

# For distribution builds (slower but smaller):
# [profile.dist]
# inherits = "release"
# lto = true
