[workspace]
members = [
    ".",
    "crates/hr-core",
    "crates/provider-hilan",
    "crates/shaon-cli",
    "crates/shaon-mcp",
]

[workspace.package]
version = "0.8.2"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/avivsinai/shaon"
authors = ["Aviv Sinai"]

[workspace.dependencies]
aes-gcm = "0.10"
anyhow = "1"
assert_cmd = "2"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
cookie_store = "0.21"
hkdf = "0.12"
keyring = { version = "3", features = ["apple-native", "linux-native", "windows-native"] }
lopdf = "0.40"
predicates = "3"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies", "charset", "http2"] }
reqwest_cookie_store = "0.8"
rpassword = "7"
rmcp = { version = "1.3", features = ["server", "transport-io"] }
schemars = "0.8"
scraper = "0.22"
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2"
zeroize = "1"

[workspace.lints.rust]
unsafe_code = "warn"
rust_2018_idioms = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
needless_pass_by_value = "allow"
too_many_arguments = "allow"
similar_names = "allow"

[package]
name = "shaon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "CLI for Hilan attendance reporting and payslip retrieval"
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["shaon", "attendance", "hr", "cli"]
categories = ["command-line-utilities"]

[lib]
name = "shaon"
path = "src/lib.rs"

[[bin]]
name = "shaon"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
hr-core = { path = "crates/hr-core" }
shaon-cli = { path = "crates/shaon-cli" }
shaon-mcp = { path = "crates/shaon-mcp" }
provider-hilan = { path = "crates/provider-hilan" }
tokio.workspace = true

[dev-dependencies]
async-trait.workspace = true
assert_cmd.workspace = true
chrono.workspace = true
predicates.workspace = true
toml.workspace = true

[lints]
workspace = true

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
opt-level = "s"

# For distribution builds (slower but smaller):
# [profile.dist]
# inherits = "release"
# lto = true
