[package]
name = "hilan-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CLI frontend for the Hilan provider stack"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
clap_complete.workspace = true
hilan-mcp = { path = "../hilan-mcp" }
hr-core = { path = "../hr-core" }
provider-hilan = { path = "../provider-hilan" }
rpassword.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing-subscriber.workspace = true
zeroize.workspace = true

[lints]
workspace = true
