[package]
name = "provider-hilan"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Hilan provider implementation on top of hr-core"

[dependencies]
aes-gcm.workspace = true
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
cookie_store.workspace = true
hr-core = { path = "../hr-core" }
hkdf.workspace = true
keyring.workspace = true
lopdf.workspace = true
rand.workspace = true
regex.workspace = true
reqwest.workspace = true
reqwest_cookie_store.workspace = true
scraper.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
urlencoding.workspace = true
zeroize.workspace = true

[lints]
workspace = true
