[package]
name = "shaon-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "MCP frontend for the Shaon provider stack"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
hr-core = { path = "../hr-core" }
provider-hilan = { path = "../provider-hilan" }
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
